--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
-    "telegraf": "3.17.3"
+    "telegraf": "^3.38.0"
   }
 }
